# clipseg_ros

./: CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
clipseg_ros/: segmentation.py
config/: segmentation.yaml
src/clipseg_ros/: segmentation.py
